# codanna

./: Cargo.toml
src/: main.rs
src/io/: parse.rs
src/parsing/: factory.rs  language.rs  mod.rs  registry.rs
src/parsing/ruby/: audit.rs  behavior.rs  definition.rs  mod.rs  parser.rs  resolution.rs  zeitwerk.rs
src/project_resolver/providers/: mod.rs  ruby.rs
